feat: last endpoints
